# Lotto-tool-mu

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python_check.yml
src/: __main__.py
src/const/: color.py  const.py  date.py
src/tools/: checker.py  draw_result.py  scraper.py  ticket_entry.py
